[package]
name = "xz-backup"
version = "0.1.0"
description = "Create backups using XZ compression"
edition = "2021"
#rust-version = ""
authors = ["Felicia.iso"]
#repository = ""
license = "Zlib"
#keywords = []
#categories = []

[dependencies]
clap = { version = "4.4.11", features = ["derive", "cargo", "wrap_help", "string"] }
toml = { version = "0.8.8", features = ["preserve_order"] }
colored = "2.1.0"
dirs = "5.0.1"
sysinfo = "0.30.2"
regex = "1.10.2"
chrono = "0.4.31"
